# laciyo

./: .gitignore  HYBRID_OPTIMIZATION_SUMMARY.md  README.md  RUST_INTEGRATION_SUMMARY.md  TESTING_SUMMARY.md  check_wiktionary.py  cyber_latin.py  cyber_latin_v2.py  extract_incubator_wiktionaries.py  morpheme_detector.py  parse_incubator.py  parse_wiktionary.py  pyproject.toml  scrape_greek_morphemes.py  scrape_latin_morphemes.py  scrape_romance_morphemes.py  setup.py  sort_readme.py
books/alice/: alice.tex
books/beginners-guide/: beginners-guide.tex
books/bible/: bible.tex
books/don-quixote/: don-quixote.tex
books/idioms/: idioms.tex
books/inferno/: inferno.tex
books/kids-book/: kids-book.tex
books/lusiadas/: lusiadas.tex
books/miorita/: miorita.tex
books/petit-prince/: petit-prince.tex
books/text-talk/: text-talk.tex
cyberlatin-cli/: Cargo.toml
cyberlatin-cli/src/: lib.rs  main.rs
cyberlatin-cli/tests/: integration_tests.rs
docs/grammar/: build.sh  grammar.tex  grammar_slop.tex  latin_word_zoo.tex
laciyo/: __init__.py  __main__.py  grammar.py  lexicon.py  phonology.py  translator.py
laciyo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lacyo/: __init__.py  optimizer.py  phonology.py  pipeline.py
scripts/: count_xmls.py  fix_readme.py  generate_genesis.py  generate_test_genome_v2.py  latin_word_zoo.py  scrape_greek_morphemes.py  update_readme.py
tests/: test_cli.py  test_grammar.py  test_lexicon.py  test_phonology.py  test_translator.py
